@@ -100,8 +100,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install wheel
         pip install numpy scipy h5py cython pandas xlrd pytest ipywidgets IPython matplotlib traitlets pyqt5
-        pip install uncertainties ptemcee corner tqdm pytest-qt periodictable wheel delocate pyopencl
+        pip install uncertainties ptemcee corner tqdm pytest-qt periodictable delocate pyopencl
         pip install git+https://github.com/pymc-devs/pymc3
 
     - name: Make wheel
