@@ -25,13 +25,14 @@ jobs:
       architecture: 'x64'
 
   - script: |
-      python -m pip install --upgrade pip && pip install numpy scipy cython traitlets ipython ipywidgets pandas h5py xlrd pytest tqdm corner uncertainties matplotlib pyqt5 pytest-qt periodictable
+      python -m pip install --upgrade pip
+      python -m pip install wheel
+      && pip install numpy scipy cython traitlets ipython ipywidgets pandas h5py xlrd pytest tqdm corner uncertainties matplotlib pyqt5 pytest-qt periodictable
   # - script: pip install git+https://github.com/pymc-devs/pymc3
 
     displayName: 'Install dependencies'
 
   - script: |
-      pip install wheel
       python setup.py bdist_wheel
     displayName: 'make wheel'
 
